# narra

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
scripts/: pre-commit
src/: error.rs  init.rs  lib.rs  main.rs
src/cli/: mod.rs  output.rs  resolve.rs
src/db/: connection.rs  schema.rs
src/embedding/: backfill.rs  candle_backend.rs  composite.rs  mod.rs  model.rs  provider.rs  queries.rs  reranker.rs  staleness.rs
src/mcp/: error.rs  mod.rs  progress.rs  server.rs  types.rs
src/models/: annotation.rs  character.rs  event.rs  fact.rs  knowledge.rs  location.rs  mod.rs  note.rs  perception.rs  phase.rs  relationship.rs  scene.rs
src/repository/: entity.rs  knowledge.rs  mod.rs  relationship.rs
src/services/: annotation_pipeline.rs  arc.rs  clustering.rs  composite.rs  consistency.rs  context.rs  emotion.rs  export.rs  graph.rs  graph_analytics.rs  impact.rs  import.rs  influence.rs  irony.rs  mod.rs  ner.rs  perception.rs  progress.rs  role_inference.rs  search.rs  summary.rs  temporal.rs  tension.rs  theme.rs  vector_ops.rs
src/session/: mod.rs  startup.rs  (+1 more)
tests/: adaptive_token_budget.rs  annotation_tests.rs  arc_tracking.rs  composite_intelligence.rs  consistency_check.rs  consistency_scope.rs  consistency_validation.rs  cross_engine_queries.rs  embedding_backfill.rs  embedding_infra.rs  entity_crud.rs  export_test.rs  fact_crud.rs  graph_workflows.rs  handler_tests.rs  import.rs  knowledge_workflows.rs  mcp_integration.rs  mcp_resources.rs  narrative_intelligence.rs  phase7_tests.rs  plugin_integration.rs  referential_integrity.rs  semantic_search.rs  session_workflows.rs  smoke_tests.rs  svc_search_ranking.rs  temporal_phase_detection.rs  tension_role_inference.rs  tool_selection.rs
(+116 files in other folders)
